# CommuteEasy

./: .gitignore  README.md  config.py  endpoints.md  firebase_config.py  pyproject.toml  requirements.txt  test_route_response.json  update_sub_alt.txt
DailyCommuter/: __init__.py  auth.py  db.py  home.py  models.py  schema.sql
DailyCommuter/templates/: addroute.html  base.html
DailyCommuter/templates/home/: map.html
DailyCommuterBackend/: __init__.py  auth.py  db.py  home.py  schema.py  schema.sql
DailyCommuterBackend/apiRouting/: api.py
DailyCommuterBackend/templates/: addroute.html
DailyCommuterBackend/templates/home/: map.html
DailyCommuterFrontend/client/daily-commuter/: package-lock.json  package.json
DailyCommuterFrontend/client/daily-commuter/src/: App.jsx  main.jsx
DailyCommuterFrontend/client/daily-commuter/src/components/: login-box.jsx  login-forms.jsx  login-redirect.jsx  my-commutes-form.jsx  new-commute-form.jsx
DailyCommuterFrontend/client/daily-commuter/src/context/: AuthContext.jsx  ProtectedRoute.jsx
DailyCommuterFrontend/client/daily-commuter/src/contexts/: auth_context.jsx
DailyCommuterFrontend/client/daily-commuter/src/pages/: commuting-page.jsx  home.jsx  (+2 more)
DailyCommuter_Backend/: auth.py  db.py  home.py  schema.sql
DailyCommuter_Backend/routes/: api.py
appname/: __init__.py  auth.py  blog.py  db.py  home.py  schema.py  schema.sql
appname/client/daily-commuter/: package-lock.json  package.json
appname/templates/: base.html
appname/templates/blog/: index.html  intex.html
appname/templates/home/: index.html
(+6 files in other folders)
